# platypuslol

./: .gitignore  Cargo.toml  ChangeLog.md  LICENSE  Makefile  README.md  TODO  opensearch.xml  package.yaml  stack.yaml
.github/workflows/: ci.yaml
app/: Main.hs
cf-http-worker/: Cargo.toml  wrangler.toml
cf-http-worker/src/: lib.rs
config/: commands.json
config/commands/: base.json  google.json  mic.json
extension/: commands.json  config.js  options.html  options.js  platypus.html  platypus.js  service_worker.js
extension/commands/: base.json  github.json  google.json  python.json
images/: icon.xcf
lol-wasm/: .gitignore  Cargo.toml  Makefile  README.md  commands.json
lol-wasm/extension/: manifest.json  options.html  options.js  platypus.html  platypus.js  service_worker.js
lol-wasm/nfa/: Cargo.toml
lol-wasm/nfa/src/: lib.rs  nfa_parser.rs
lol-wasm/redirect/: Cargo.toml
lol-wasm/redirect/src/: lib.rs  query_dsl.rs  redirector.rs
lol-wasm/server/: Cargo.toml
lol-wasm/server/src/: main.rs
lol-wasm/src/: ambiguous_parser.rs  lib.rs  main.rs  nfa_parser.rs  nfa_parser_tests.rs  query_dsl.rs  redirect.rs
lol-wasm/tool/: Cargo.toml
lol-wasm/tool/src/: main.rs
lol-wasm/wasm_lol/: Cargo.toml
lol-wasm/wasm_lol/src/: lib.rs
nfa/: Cargo.toml
nfa/src/: nfa_parser.rs  nfa_parser_tests.rs  simple_regex.rs
redirect/: Cargo.toml
redirect/src/: config.rs  lib.rs  query_dsl.rs  redirector.rs  state.rs
resources/: commands.conf  index.html  keypress.js  list.css  opensearch.xml
scripts/: generate_ssl_cert.sh  platypus-lol.service
server/: Cargo.toml
server/src/: main.rs
src/Platypuslol/: AmbiguousParser.hs  CommandStore.hs  Commands.hs  Git.hs  RedirectServer.hs  Types.hs  Util.hs
src/Platypuslol/Web/: List.hs
tool/src/: main.rs
wasm_lol/: Cargo.toml
wasm_lol/src/: lib.rs
web-redirector/: Cargo.toml
web-redirector/src/: config.rs  html.rs  lib.rs  types.rs  utils.rs
