[workspace]

resolver = "2"
members = [
  "nfa",
  "redirect",
  "tool",
  "server",
]

[workspace.package]
edition = "2021"
version = "0.0.0"

[workspace.dependencies]
nfa = { path="nfa" }
redirect = { path = "redirect" }
tool = { path = "tool" }
server = { path = "server" }

anyhow = "1.0.90"
clap = { version = "4.5.20", features = ["derive"]}
futures-util = "0.3.31"
html-builder = "0.5.1"
hyper = { version = "0.14", features = ["full"]}
itertools = "0.13.0"
lazy_static = "1.5.0"
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
serde_json = "1.0.128"
serde = { version = "1.0.210" , features = ["derive"] }
serde_path_to_error = "0.1.11"
tokio = { version = "1.40.0", features = ["full"]}
url = "2.5.2"
