[workspace]

resolver = "2"
members = [
  "cf-http-worker",
  "nfa",
  "redirect",
  "server",
  "tool",
  "web-redirector",
]

[workspace.package]
edition = "2021"
version = "0.0.0"

[workspace.dependencies]
cf-http-worker = { path="cf-http-worker" }
nfa = { path="nfa" }
redirect = { path = "redirect" }
tool = { path = "tool" }
web-redirector = { path = "web-redirector" }
server = { path = "server" }

anyhow = "1.0.95"
clap = { version = "4.5.39", features = ["derive"]}
console_error_panic_hook = { version = "0.1.1" }
futures-util = "0.3.31"
html-builder = "0.5.1"
http = "1.1"
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["full"]}
hyper-util = { version = "0.1", features = ["full"]}
itertools = "0.14.0"
lazy_static = "1.5.0"
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
serde = { version = "1.0.219" , features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.11"
tokio = { version = "1.44.0", features = ["full"]}
url = "2.5.4"
worker-macros = { version="0.5.0", features=['http'] }
worker = { version="0.5.0", features=['http'] }
