[package]
name = "lol-wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "lol_wasm"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "lol"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.3", features = ["derive"]}
wasm-bindgen = "0.2.86"
serde = { version = "1.0.164" , features = ["derive"] }
serde_json = "1.0.96"
regex = "1.8.4"

