[workspace]

resolver = "2"
members = [
  "nfa",
  "redirect",
  "tool",
  "wasm_lol",
]

[workspace.package]
edition = "2021"
version = "0.0.0"

[workspace.dependencies]
nfa = { path="nfa" }
redirect = { path = "redirect" }
tool = { path = "tool" }
wasm_lol = { path = "wasm_lol" }

clap = { version = "4.3.3", features = ["derive"]}
regex = "1.8.4"
serde_json = "1.0.96"
serde = { version = "1.0.164" , features = ["derive"] }
serde_path_to_error = "0.1.11"
wasm-bindgen = "0.2.86"
