[package]
name = "server"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "platypus-lol"
path = "src/main.rs"

[dependencies]
nfa.workspace = true
redirect.workspace = true
web-redirector.workspace = true

anyhow.workspace = true
futures-util.workspace = true
html-builder.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tokio.workspace = true
clap.workspace = true
url.workspace = true
lazy_static.workspace = true
itertools = "0.14.0"
