[package]
name = "wasm_lol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lol_wasm"
crate-type = ["cdylib", "lib"]

[dependencies]
nfa.workspace = true
redirect.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
wasm-bindgen.workspace = true
