[package]
name = "web-redirector"
version = "0.1.0"
edition = "2021"

[lib]
name = "web_redirector"
crate-type = ["cdylib", "lib"]

[dependencies]
nfa.workspace = true
redirect.workspace = true

anyhow.workspace = true
futures-util.workspace = true
html-builder.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
lazy_static.workspace = true
itertools = "0.14.0"
